--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mis Tareas</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     
 </head>
 <body>
-    
+
     <main class="d-flex justify-content-center ">
     <div class=" text-center contenedor">
         <h1 class="text-secondary">Agenda de Recordatorios</h1>
@@ -32,6 +32,6 @@
         </div>
     </div>
     </main>
-    <script src="/js/index.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
